# Helmet-detection

./: .gitignore  README.md  evaluate.py  inference.py  pyproject.toml  train.py
assets/plots/train/val/: results.csv
config/: train_config.yaml
notebooks/: data_visual.ipynb
runs/detect/models/helmet-detection/: args.yaml
runs/detect/models/helmet-detection-2/: args.yaml
runs/detect/models/helmet-detection-3/: args.yaml
runs/detect/models/helmet-detection-4/: args.yaml  results.csv
runs/detect/models/helmet-detection-5/: args.yaml
src/: download_data.py
