[project]
name = "helmet-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "opencv-python-headless>=4.10.0.84",
    "roboflow>=1.3.12",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]
